2010-04-16  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=37745
        Move string uniquing tables to (new) WTFThreadData class.

        Remove AtomicString's dependency on ThreadGlobalData so that we can move
        WebCore's string classes up to WTF.

        * ForwardingHeaders/wtf/WTFThreadData.h: Added.
        * platform/ThreadGlobalData.cpp: Remove m_atomicStringTable, all wtfThreadData() to ensure threadsafely initialized.
        (WebCore::ThreadGlobalData::ThreadGlobalData):
        (WebCore::ThreadGlobalData::~ThreadGlobalData):
        * platform/ThreadGlobalData.h: Remove m_atomicStringTable.
        (WebCore::ThreadGlobalData::eventNames):
        * platform/text/AtomicString.cpp:
        (WebCore::AtomicStringTable::create):
        (WebCore::AtomicStringTable::table):
        (WebCore::AtomicStringTable::destroy):
        (WebCore::stringTable): Access the AtomicStringTable on wtfThreadData() rather then threadGlobalData().

2010-04-19  Ada Chan  <adachan@apple.com>

        Build fix: wrap Settings::setLocalStorageQuota() and Settings::setSessionStorageQuota()
        in #if ENABLE(DOM_STORAGE).

        * page/Settings.cpp:
        (WebCore::Settings::Settings):
        * page/Settings.h:

2010-04-19  Dave Moore  <davemoore@chromium.org>

        Reviewed by Dimitri Glazkov.

        Added notification when the favicons for a page are changed
        from a script.
        The Document object will notify the frame loader, which will
        notify the client. Implementations of FrameLoaderClient will
        have to add one method; dispatchDidChangeIcons().

        https://bugs.webkit.org/show_bug.cgi?id=33812

        Test: fast/dom/icon-url-property.html

        * dom/Document.cpp:
        (WebCore::Document::setIconURL):
        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::setIconURL):
        * loader/DocumentLoader.h: